--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 helo i hope you like moyais =)
+  <img src="https://images.emojiterra.com/twitter/512px/1f5ff.png">
 </body>
 </html>
