--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
 <title>moyai</title>
+  <style>
+    h3 {text-align:center;
+      font-family:"EB Garamond";
+  </style>
 </head>
 <body>
+  <h3>
 helo i hope you like moyais =)
-  <img src="https://images.emojiterra.com/twitter/512px/1f5ff.png">
+  </h3>
+    <img src="https://images.emojiterra.com/twitter/512px/1f5ff.png">
 </body>
 </html>
