--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>moyai</title>
   <style>
     h3 {text-align:center;
-      font-family:"EB Garamond";
+      font-family:"EB Garamond";}
   </style>
 </head>
 <body>
