--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
 <title>moyai</title>
   <style>
-    h3 {text-align:center;
-      font-family:"EB Garamond";}
+    h3 {font-family:"EB Garamond";}
   </style>
 </head>
 <body>
