--- a/index.html
+++ b/index.html
@@ -4,14 +4,53 @@
   <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
 <title>moyai</title>
   <style>
-    h3 {font-family:"EB Garamond";}
+    @keyframes fadein{
+        0%{opacity:0;
+        }
+        100%{opacity:1;
+        }
+    }
+    body{
+        text-align:center;
+        animation: fadein 2.5s;
+        font-family:"Lucida Sans";
+    }
+    h3 {font-family:"Lucida Sans";
+    font-size:64px;}
+    h5 {font-size:20px;
+      font-family:"Lucida Sans";}
+
+    #moyai{
+        width:200px;
+        transition-duration: 1s;
+    }
+    #moyai:hover{
+        width:290px;
+        transition-duration: 1.5s;
+    }
+    a{
+        text-decoration:none;
+        color:black;
+        transition-duration:1s;
+    }
+    a:hover{
+        color:grey;
+        transition-duration:0.5s;
+    }
+    #footer{position:fixed;
+    bottom:10px;
+    width:100%;
+    background-color:white;}
   </style>
 </head>
 <body>
   <h3>
-helo i hope you like moyais =)
+moyai / モヤイ
   </h3>
-    <img src="https://images.emojiterra.com/twitter/512px/1f5ff.png">
-  <h1>the cEO is mr smauel brownie :)</h1>
+  <h5>cool stuff and moyais (but mainly just moyais at the moment)</h5><br><br>
+  <a href="https://teespring.com/en-GB/moyai-tee#pid=369&cid=6512&sid=front" target="_blank"><img id="moyai" src="https://vangogh.teespring.com/shirt_pic/57568657/57863863/369/6512/480x9999/front.jpg">
+  <h5>moyai / モヤイ tee<br>
+buy through teespring</a></h5>
+<div id="footer"><a href="https://instagram.com/olum2k">@olum2k :^)</a></div>
 </body>
 </html>
