--- a/index.html
+++ b/index.html
@@ -10,13 +10,28 @@
         100%{opacity:1;
         }
     }
+    @keyframes rainbow{
+        0%{color:white;}
+        10%{color:rgb(184, 30, 30);}
+        20%{color:rgb(216, 137, 0)}
+        30%{color:rgb(233, 233, 97)}
+        40%{color:rgb(16, 153, 16)}
+        50%{color:rgb(63, 63, 200)}
+        60%{color:rgb(83, 14, 136)}
+        70%{color:rgb(231, 144, 231)}
+        80%{color:black;}
+        100%{color:white;}
+    }
     body{
         text-align:center;
         animation: fadein 2.5s;
         font-family:"Lucida Sans";
     }
     h3 {font-family:"Lucida Sans";
-    font-size:64px;}
+    font-size:64px;
+    
+    animation: rainbow 10s;
+    animation-iteration-count: infinite;}
     h5 {font-size:20px;
       font-family:"Lucida Sans";}
 
