--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@ moyai / モヤイ
   <a href="https://teespring.com/en-GB/moyai-tee#pid=369&cid=6512&sid=front" target="_blank"><img id="moyai" src="https://vangogh.teespring.com/shirt_pic/57568657/57863863/369/6512/480x9999/front.jpg">
   <h5>moyai / モヤイ tee<br>
 buy through teespring</a></h5>
-<div id="footer"><a href="https://instagram.com/olum2k">@olum2k :^)</a></div>
+<div id="footer"><a href="https://instagram.com/olum2k" target="_blank">@olum2k :^)</a></div>
 </body>
 </html>
