--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     }
     h3 {font-family:"Lucida Sans";
     font-size:64px;
+    text-shadow:-2px 2px rgb(117, 116, 116);
     
     animation: rainbow 10s;
     animation-iteration-count: infinite;}
