--- a/index.html
+++ b/index.html
@@ -63,5 +63,6 @@
   <h3>
 moyai / モヤイ
   </h3>
+  <img src="https://images.emojiterra.com/twitter/v11/512px/1f5ff.png" width="300px">
 </body>
 </html>
